Knowrob/indigo/indigo-knowrob-dev/catkin_ws/logs/hm_marker_detection/build.make.044.log
[35m[1mScanning dependencies of target marker_localizer
[0m[100%] [32mBuilding CXX object CMakeFiles/marker_localizer.dir/src/MarkerLocalizer.cpp.o
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp: In member function 'void MarkerLocalizer::imageReceivedCallback(const ImageConstPtr&)':
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:108:8: error: 'geometry_msgs::Pose' has no member named 'point'
   pose.point.x = l_markerPose.pose.pose.position.x;
        ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:109:8: error: 'geometry_msgs::Pose' has no member named 'point'
   pose.point.y = l_markerPose.pose.pose.position.y;
        ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:110:8: error: 'geometry_msgs::Pose' has no member named 'point'
   pose.point.z = l_markerPose.pose.pose.position.z;
        ^
make[2]: *** [CMakeFiles/marker_localizer.dir/src/MarkerLocalizer.cpp.o] Error 1
make[1]: *** [CMakeFiles/marker_localizer.dir/all] Error 2
make: *** [all] Error 2
